--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <nav>
-            <span><img  src="/netflix_clone/asssets/images/logo.svg" alt=""></span>
+            <span><img  src="/asssets/images/logo.svg" alt=""></span>
             <div>
                 <button>English</button>
                 <button class="sgn">Sign in</button>
