tv section made and some changes in hero section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
                 <div class="inpt"><button>Get Started <img src="/HTML_CSS_JS/netflix_clone/asssets/arrow.svg" alt=""></button></div>
             </div>
         </div>
+        <div class="tv-box">
+            <div class="text">
+                <div class="bold-head">Enjoy on your TV</div>
+                <div class="small-text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</div>
+            </div>
+            <div class="tv-screen">
+                <img src="/asssets/images/tv.png" alt="">
+            </div>
+        </div>
     </div>
-    div
 
 </body>
 
