--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="tv-box">
             <div class="text">
-                <div class="bold-head">Enjoy on your TV</div>
+                <div class="bold-head">Enjoy on your <br> TV</div>
                 <div class="small-text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</div>
             </div>
             <div class="tv-screen">
