--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="/asssets/style.css">
 </head>
 
@@ -24,9 +24,11 @@
             <span class="a2">Watch anywhere. Cancel anytime.</span>
             <span class="a3">Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email">
-                <div class="inpt"><input></div>
-                <div class="inpt"><button>Get Started <img src="netflix_clone/asssets/arrow.svg" alt=""></button></div>
+                <div class="inpt"><input type="email" placeholder="Email address"></div>
+                <div class="inpt"><button>Get Started &gt;</button></div>
             </div>
+        </div>
+        <div class="line-seperator"></div>
         </div>
         <div class="tv-box">
             <div class="text">
@@ -35,6 +37,7 @@
             </div>
             <div class="tv-screen">
                 <img src="/asssets/images/tv.png" alt="">
+                <video src="/asssets/videos/video-tv-in-0819.m4v"></video>
             </div>
         </div>
     </div>
