--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="tv-screen">
                 <img src="/asssets/images/tv.png" alt="">
-                <video src="/asssets/videos/video-tv-in-0819.m4v"></video>
+                <video src="/asssets/videos/video-tv-in-0819.m4v" autoplay loop muted></video>
             </div>
         </div>
     </div>
