--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="/asssets/style.css">
+    <link rel="stylesheet" href="./asssets/style.css">
 </head>
 
 <body>
     <div class="main">
         <nav>
-            <span><img  src="/asssets/images/logo.svg" alt=""></span>
+            <span><img  src="./asssets/images/logo.svg" alt=""></span>
             <div>
                 <button>English</button>
                 <button class="sgn">Sign in</button>
@@ -36,8 +36,8 @@
                 <div class="small-text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</div>
             </div>
             <div class="tv-screen">
-                <img src="/asssets/images/tv.png" alt="">
-                <video src="/asssets/videos/video-tv-in-0819.m4v" autoplay loop muted></video>
+                <img src="./asssets/images/tv.png" alt="">
+                <video src="./asssets/videos/video-tv-in-0819.m4v" autoplay loop muted></video>
             </div>
         </div>
     </div>
