--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="./asssets/style.css">
+    <link rel="stylesheet" href="/asssets/style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             </div>
             <div class="tv-screen">
                 <img src="./asssets/images/tv.png" alt="">
-                <video src="./asssets/videos/video-tv-in-0819.m4v" autoplay loop muted></video>
+                <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
             </div>
         </div>
     </div>
