Added new section
Added downloading section and changed size of tv section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,26 @@
                 <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
             </div>
         </div>
+
+        <div class="line-seperator"></div>
+
+        <div class="download-Box">
+            <div class="strange-things">
+                <img id="eleven" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+                <div class="str-download">
+                    <img id="img-1" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/boxshot.png" alt="no Image">
+                    <div>
+                        Stranger Things <br>
+                        <span style="color: rgb(21, 122, 253);">Downloading...</span>
+                    </div>
+                    <div><img id="gif-1" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif" alt=""></div>
+                </div>
+            </div>
+            <div class="text">
+                <div class="bold-head">Download your shows to watch offline</div>
+                <div class="small-text">Save your favourites easily and always have something to watch.</div>
+            </div>
+        </div>
     </div>
 
 </body>
