--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <nav>
-            <span><img  src="./asssets/images/logo.svg" alt=""></span>
+            <span><img src="./asssets/images/logo.svg" alt=""></span>
             <div>
                 <button>English</button>
                 <button class="sgn">Sign in</button>
@@ -30,37 +30,59 @@
             </div>
         </div>
         <div class="line-seperator"></div>
+    </div>
+    <div class="tv-box">
+        <div class="text">
+            <div class="bold-head">Enjoy on your <br> TV</div>
+            <div class="small-text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and
+                more.</div>
         </div>
-        <div class="tv-box">
-            <div class="text">
-                <div class="bold-head">Enjoy on your <br> TV</div>
-                <div class="small-text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</div>
-            </div>
-            <div class="tv-screen">
-                <img src="./asssets/images/tv.png" alt="">
-                <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
-            </div>
+        <div class="tv-screen">
+            <img src="./asssets/images/tv.png" alt="">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                autoplay loop muted></video>
         </div>
+    </div>
 
-        <div class="line-seperator"></div>
+    <div class="line-seperator"></div>
 
-        <div class="download-Box">
-            <div class="strange-things">
-                <img id="eleven" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
-                <div class="str-download">
-                    <img id="img-1" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/boxshot.png" alt="no Image">
-                    <div>
-                        Stranger Things <br>
-                        <span style="color: rgb(21, 122, 253);">Downloading...</span>
-                    </div>
-                    <div><img id="gif-1" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif" alt=""></div>
+    <div class="download-Box">
+        <div class="strange-things">
+            <img id="eleven"
+                src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+            <div class="str-download">
+                <img id="img-1"
+                    src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/boxshot.png"
+                    alt="no Image">
+                <div>
+                    Stranger Things <br>
+                    <span style="color: rgb(21, 122, 253);">Downloading...</span>
                 </div>
-            </div>
-            <div class="text">
-                <div class="bold-head">Download your shows to watch offline</div>
-                <div class="small-text">Save your favourites easily and always have something to watch.</div>
+                <div><img id="gif-1"
+                        src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/download-icon.gif"
+                        alt=""></div>
             </div>
         </div>
+        <div class="text">
+            <div class="bold-head">Download your shows to watch offline</div>
+            <div class="small-text">Save your favourites easily and always have something to watch.</div>
+        </div>
+    </div>
+
+    <div class="line-seperator"></div>
+
+    <div class="multi-device">
+        <div class="main-text">
+            <span class="watch-text">Watch everywhere</span><br>
+            <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
+            </span>
+        </div>
+        <div class="devices">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" type="video/mp4"  autoplay loop muted></video>
+        </div>
+    </div>
+    <div class="line-seperator"></div>
     </div>
 
 </body>
