--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
         </div>
     </div>
     <div class="line-seperator"></div>
+    <div class="kids-sec">
+        <div class="kid-img"><img src="https://occ-0-2953-3647.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d" alt=""></div>
+        <div class="kid-txt">
+            <div>Create profiles for kids</div>
+            <div>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</div>
+        </div>
+    </div>
     </div>
 
 </body>
