Question section added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
             <div>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</div>
         </div>
     </div>
+    <div class="line-seperator"></div>
+    <div class="freq-que">
+        <span>Frequently Asked Questions</span>
+        <br>
+        <div class="que">What is Netflix?</div>
+        <div class="que">oal</div>
+        <div class="que">ola</div>
+        <div class="que">ola</div>
+        <div class="que">ola</div>
+        <div class="que">ola</div>
+    </div>
     </div>
 
 </body>
