Added footer section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="a3">Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email">
                 <div class="inpt"><input type="email" placeholder="Email address"></div>
-                <div class="inpt"><button>Get Started &gt;</button></div>
+                <div class="inpt"><button>Get Started > </button></div>
             </div>
         </div>
         <div class="line-seperator"></div>
@@ -94,14 +94,47 @@
     <div class="freq-que">
         <span>Frequently Asked Questions</span>
         <br>
-        <div class="que">What is Netflix?</div>
-        <div class="que">oal</div>
-        <div class="que">ola</div>
-        <div class="que">ola</div>
-        <div class="que">ola</div>
-        <div class="que">ola</div>
+        <div class="que">What is Netflix?<span>+</span></div>
+        <div class="que">How much does Netflix cost? <span>+</span></div>
+        <div class="que">Where can I watch?<span>+</span></div>
+        <div class="que">How do I cancel?<span>+</span></div>
+        <div class="que">What can I watch?<span>+</span></div>
+        <div class="que">Is Netflix good for kids?<span>+</span></div>
+        <p class="ano">Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="email">
+            <div class="inpt"><input type="email"placeholder="Email address"></div>
+            <div class="inpt"><button>Get Started > </button></div>
+        </div>
     </div>
+    <div class="line-seperator"></div>
     </div>
+    <footer>
+        <p>Questions? Call 000-800-919-1694</p>
+        <ul>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Investor relation</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Speed Test</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Help Center</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Cookie Reference</a></li>
+            <li><a href="">Legal Notices</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Account</a></li>
+            <li><a href="">Ways to Watch</a></li>
+            <li><a href="">Corporate Information</a></li>
+            <li><a href="">Only on Netflix</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Media Center</a></li>
+            <li><a href="">Terms of Use</a></li>
+            <li><a href="">Contacts Us</a></li>
+        </ul>
+
+    </footer>
 
 </body>
 
