--- a/index.html
+++ b/index.html
@@ -110,29 +110,38 @@
     </div>
     <footer>
         <p>Questions? Call 000-800-919-1694</p>
-        <ul>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Investor relation</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Speed Test</a></li>
-        </ul>
-        <ul>
-            <li><a href="">Help Center</a></li>
-            <li><a href="">Jobs</a></li>
-            <li><a href="">Cookie Reference</a></li>
-            <li><a href="">Legal Notices</a></li>
-        </ul>
-        <ul>
-            <li><a href="">Account</a></li>
-            <li><a href="">Ways to Watch</a></li>
-            <li><a href="">Corporate Information</a></li>
-            <li><a href="">Only on Netflix</a></li>
-        </ul>
-        <ul>
-            <li><a href="">Media Center</a></li>
-            <li><a href="">Terms of Use</a></li>
-            <li><a href="">Contacts Us</a></li>
-        </ul>
+        <div class="item1">
+            <ul>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Investor relation</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Speed Test</a></li>
+            </ul>
+        </div>
+        <div class="item2">
+            <ul>
+                <li><a href="">Help Center</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">Cookie Reference</a></li>
+                <li><a href="">Legal Notices</a></li>
+            </ul>
+        </div>
+        <div class="item3">
+            <ul>
+                <li><a href="">Account</a></li>
+                <li><a href="">Ways to Watch</a></li>
+                <li><a href="">Corporate Information</a></li>
+                <li><a href="">Only on Netflix</a></li>
+            </ul>
+        </div>
+        <div class="item4">
+            <ul>
+                <li><a href="">Media Center</a></li>
+                <li><a href="">Terms of Use</a></li>
+                <li><a href="">Contacts Us</a></li>
+            </ul>
+        </div>
+        
 
     </footer>
 
