--- a/index.html
+++ b/index.html
@@ -78,16 +78,21 @@
             </span>
         </div>
         <div class="devices">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="">
-            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" type="video/mp4"  autoplay loop muted></video>
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png"
+                alt="">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                type="video/mp4" autoplay loop muted></video>
         </div>
     </div>
     <div class="line-seperator"></div>
     <div class="kids-sec">
-        <div class="kid-img"><img src="https://occ-0-2953-3647.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d" alt=""></div>
+        <div class="kid-img"><img
+                src="https://occ-0-2953-3647.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
+                alt=""></div>
         <div class="kid-txt">
             <div>Create profiles for kids</div>
-            <div>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</div>
+            <div>Send children on adventures with their favourite characters in a space made just for them—free with
+                your membership.</div>
         </div>
     </div>
     <div class="line-seperator"></div>
@@ -102,47 +107,56 @@
         <div class="que">Is Netflix good for kids?<span>+</span></div>
         <p class="ano">Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="email">
-            <div class="inpt"><input type="email"placeholder="Email address"></div>
+            <div class="inpt"><input type="email" placeholder="Email address"></div>
             <div class="inpt"><button>Get Started > </button></div>
         </div>
     </div>
     <div class="line-seperator"></div>
     </div>
     <footer>
-        <p>Questions? Call 000-800-919-1694</p>
-        <div class="item1">
-            <ul>
-                <li><a href="">FAQ</a></li>
-                <li><a href="">Investor relation</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Speed Test</a></li>
-            </ul>
-        </div>
-        <div class="item2">
-            <ul>
-                <li><a href="">Help Center</a></li>
-                <li><a href="">Jobs</a></li>
-                <li><a href="">Cookie Reference</a></li>
-                <li><a href="">Legal Notices</a></li>
-            </ul>
-        </div>
-        <div class="item3">
-            <ul>
-                <li><a href="">Account</a></li>
-                <li><a href="">Ways to Watch</a></li>
-                <li><a href="">Corporate Information</a></li>
-                <li><a href="">Only on Netflix</a></li>
-            </ul>
-        </div>
-        <div class="item4">
-            <ul>
-                <li><a href="">Media Center</a></li>
-                <li><a href="">Terms of Use</a></li>
-                <li><a href="">Contacts Us</a></li>
-            </ul>
-        </div>
-        
+        <div class="foot1">
 
+            <span>Questions? Call 000-800-919-1694</span>
+            <div class="footer">
+                <div class="item1 items">
+                    <ul>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">Investor relation</a></li>
+                        <li><a href="">Privacy</a></li>
+                        <li><a href="">Speed Test</a></li>
+                    </ul>
+                </div>
+                <div class="item2 items">
+                    <ul>
+                        <li><a href="">Help Center</a></li>
+                        <li><a href="">Jobs</a></li>
+                        <li><a href="">Cookie Reference</a></li>
+                        <li><a href="">Legal Notices</a></li>
+                    </ul>
+                </div>
+                <div class="item3 items">
+                    <ul>
+                        <li><a href="">Account</a></li>
+                        <li><a href="">Ways to Watch</a></li>
+                        <li><a href="">Corporate Information</a></li>
+                        <li><a href="">Only on Netflix</a></li>
+                    </ul>
+                </div>
+                <div class="item4 items">
+                    <ul>
+                        <li><a href="">Media Center</a></li>
+                        <li><a href="">Terms of Use</a></li>
+                        <li><a href="">Contacts Us</a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <button>
+                
+                English
+            </button>
+            <p>Netflix India</p>
+        </div>
     </footer>
 
 </body>
